--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>D3 is Great</title>
+    <title>D3 is Great!</title>
     <script src="http://d3js.org/d3.v3.min.js">
       var dataset = [10,20,30,40];
 
