--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@ circles.data(dataset)
       </script>
   </head>
   <body>
-    <p>Paragraph one.</p>
+    <p>Paragraph one. Test</p>
     <p>Paragraph two.</p>
       
       
