--- a/pair.html
+++ b/pair.html
@@ -10,25 +10,28 @@
   <body>
     <script>
 
-     var data = new Array(1600);
+    var data = new Array(1600);
 
-     var svg = d3.select("body").append("svg")
-                   .attr("width", 800)
-                   .attr("height", 600);
+      var svg = d3.select("body").append("svg")
+                  .attr("width", 800)
+                  .attr("height", 600);
 
-    var all_rect = svg.selectAll("rect")
-          .data(data)
-          .enter().append("rect")
-          .attr("y", function(d, i) {data[i]=0; return (i%40)*20})
-          .attr("width", 18)
-          .attr("height", 18)
-          .attr("x", function(d, i) { return Math.floor(i/40)*20;})
-          .style("fill", "#659ec7");
-    // d3.selectAll("rect").on("mousedown".function(d,i) {
-    //   d3.select(this).style('fill','#ff77b4');
-    //   data[i]=1;
-    // });
+   var all_rect = svg.selectAll("rect")
+         .data(data)
+         .enter().append("rect")
+         .attr("y", function(d, i) { data[i]=0; return (i%40)*20 })
+         .attr("width", 18)
+         .attr("height", 18)
+         .attr("x", function(d, i) { return Math.floor(i/40)*20; })
+         .style("fill", "#659ec7");
 
+   d3.selectAll("rect").on("mousedown",function(d,i) {
+     d3.select(this).style("fill","#ff77b4");
+     data[i]=1;
+   });
     </script>
+    <div>
+     <button type="button">Play the Game of Life!</button>
+     </div>
   </body>
 </html>
